style-rtl.css
/*
Theme Name:     Fagri
Theme URI:      https://themeisle.com/themes/fagri/
Author:         ThemeIsle
Author URI:     https://themeisle.com
Description:    Fagri is a responsive WordPress theme, built to fit all kinds of businesses. Its multipurpose design is great for small businesses, startups, corporate businesses, freelancers, portfolios, WooCommerce, creative agencies, or niche websites (medical, restaurants, sports, fashion). Fagri was created on top of Now UI Kit and displays an elegant one-page layout, complemented by the smooth parallax effect. The theme comes with a clean look, but it also provides subtle hover animations. Moreover, Fagri offers Sendinblue newsletter integration, a flexible interface via Live Customizer, a widgetized footer, full compatibility with Elementor and Beaver Builder, a full-width featured slider, and even more functionality based on the latest WordPress trends. Last but not least, the theme is lightweight and SEO-friendly.
Version:        1.0.2
License:        GNU General Public License v2 or later
License URI:    http://www.gnu.org/licenses/gpl-2.0.html
Text Domain:    fagri
Template:       hestia
Tags: blog, custom-logo, portfolio, e-commerce, rtl-language-support, grid-layout, one-column, two-columns, custom-background, custom-colors, custom-header, custom-menu, featured-image-header, featured-images, flexible-header, full-width-template, sticky-post, theme-options, threaded-comments, translation-ready, left-sidebar, right-sidebar, footer-widgets

This theme, like WordPress, is licensed under the GPL.
Use it to make something cool, have fun, and share what you've learned with others.

*/
/* General */
/* Font Smooth properties */
/* Front page title and subtitle */
/* Buttons */
/* Contact Form icon */
/* Dark overlay for sections with background image option */
/* WooCommerce pages */
/* related, cross-sells, upsells title */
/* Icon on before of the input field wrapper */
/*--------------------------------------------------------------
# Typography
--------------------------------------------------------------*/
h1, h2, h3, h4, h5, h6 {
  font-family: inherit;
}

div, p, a, span, li, body {
  font-family: inherit;
}

body {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

/*--------------------------------------------------------------
# Elements
--------------------------------------------------------------*/
/*--------------------------------------------------------------
## Social icons color
--------------------------------------------------------------*/
.authors-on-blog .footer a[href*="facebook.com"] {
  color: #3b5998;
}

.authors-on-blog .footer a[href*="twitter.com"] {
  color: #55acee;
}

.authors-on-blog .footer a[href*="pinterest.com"] {
  color: #cc2127;
}

.authors-on-blog .footer a[href*="google.com"] {
  color: #dd4b39;
}

.authors-on-blog .footer a[href*="linkedin.com"] {
  color: #0976b4;
}

.authors-on-blog .footer a[href*="dribbble.com"] {
  color: #ea4c89;
}

.authors-on-blog .footer a[href*="github.com"] {
  color: #333;
}

.authors-on-blog .footer a[href*="youtube.com"] {
  color: #e52d27;
}

.authors-on-blog .footer a[href*="instagram.com"] {
  color: #125688;
}

.authors-on-blog .footer a[href*="reddit.com"] {
  color: #ff4500;
}

.authors-on-blog .footer a[href*="tumblr.com"] {
  color: #35465c;
}

.authors-on-blog .footer a[href*="behance.com"] {
  color: #1769ff;
}

.authors-on-blog .footer a[href*="snapchat.com"] {
  color: #fffc00;
}

.authors-on-blog .footer a[href*="deviantart.com"] {
  color: #05cc47;
}

.authors-on-blog .footer a[href*="vimeo.com"] {
  color: #1ab7ea;
}

/*--------------------------------------------------------------
## Card Product
--------------------------------------------------------------*/
.card-product {
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
}
.card-product .card-image {
  box-shadow: none;
  margin: 0;
}
.card-product .content {
  padding: 20px 5px;
}
.card-product .content .category a {
  font-weight: 700;
  text-transform: none;
}
.card-product .content .card-title a {
  font-weight: 400;
  line-height: 26px;
  margin-top: 15px;
  margin-bottom: 12px;
  border-bottom: 2px solid transparent;
  transition: all 150ms ease 0s;
}
.card-product .content .card-title a:hover {
  opacity: initial;
}
.card-product .content .card-description p {
  color: #9A9A9A;
  font-weight: 300;
  line-height: 27px;
}
.card-product .content .footer {
  margin-top: 5px;
}
.card-product .content .footer .price h4 {
  color: #888888;
  font-size: 16px;
  font-weight: 400;
  line-height: 23px;
  margin-top: 9px;
}
.card-product .content .footer .stats a i {
  font-size: 15px;
}
.card-product .content .footer .stats a .tooltip .tooltip-arrow:before {
  border-top: 7px solid transparent;
  border-bottom: 7px solid transparent;
  top: -7px;
  content: "";
  border-right: 7px solid white;
  right: -9px;
  position: absolute;
  display: block;
  width: 5px;
  height: 5px;
  z-index: 100;
}
.card-product .content .footer .stats a .tooltip .tooltip-arrow {
  border-top: 7px solid transparent;
  border-bottom: 7px solid transparent;
  border-right: 7px solid rgba(0, 0, 0, 0.2);
  top: 55px;
  right: 30% !important;
  position: absolute;
  width: 5px;
  height: 5px;
}
.card-product .content .footer .stats a .tooltip .tooltip-inner {
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
  background-color: #FFFFFF;
  box-shadow: 0 1px 13px rgba(0, 0, 0, 0.14), 0 0 0 1px rgba(115, 71, 38, 0.23);
  color: #66615B;
  max-width: 200px;
  padding: 10px 10px;
  text-align: center;
  text-decoration: none;
  opacity: 1;
  transform: translate3d(75%, 100%, 0);
}
/* ... */

